--- a/ckan/templates/home/snippets/promoted.html
+++ b/ckan/templates/home/snippets/promoted.html
@@ -1,4 +1,5 @@
 {% set intro = g.site_intro_text %}
+{% set placeholder_image = g.placeholder_image_url %}
 
 <div class="module-promotion card box">
   <div>
