--- a/ckan/templates/organization/snippets/organization_item.html
+++ b/ckan/templates/organization/snippets/organization_item.html
@@ -11,6 +11,8 @@ Example:
       {% endfor %}
     </ul>
 #}
+{% set position = position|default(0) %}
+
 {% set url = h.url_for(organization.type ~ '.read', id=organization.name) %}
 {% block item %}
 <li class="media-item">
